crates/plotnik-tests/tests/04-emit/types/quantifiers/error_optional_skip_needs_collecting_capture.txt
Q = (program
  {
    (lexical_declaration) @decl
    (debugger_statement) @dbg
  }?
)
------------------ DIAGNOSTICS -------------------
error: captures `@decl`, `@dbg` skip together with `?` but nothing collects them
 --> query.ptk:2:3
  |
2 | /   {
3 | |     (lexical_declaration) @decl
4 | |     (debugger_statement) @dbg
5 | |   }?
  | |____^
  |
help: collect the optional record in `@items`
  |
2 |   {
3 |     (lexical_declaration) @decl
4 |     (debugger_statement) @dbg
5 ~   }? @items
  |
help: append `@_` instead if the optional result should be discarded
